--- a/_sass/yolo/themes/_poc.scss
+++ b/_sass/yolo/themes/_poc.scss
@@ -29,19 +29,19 @@
 // Dark mode
 :root[dark] {
   --primary-color: #000928;
-  --on-primary-color: #dbe1ff;
+  --on-primary-color: #fb1d9e;
   --primary-container-color: #000712;
-  --on-primary-container-color: #9bcbff;
+  --on-primary-container-color: #b9026d;
 
   --secondary-color: #00b0ff;
   --on-secondary-color: #011e31;
   --secondary-container-color: #00344f;
   --on-secondary-container-color: #8ecdff;
 
-  --tertiary-color: #fb1d9e;
-  --on-tertiary-color: #2a0016;
-  --tertiary-container-color: #8c0056;
-  --on-tertiary-container-color: #ff82ba;
+  --tertiary-color: #774bd5;
+  --on-tertiary-color: #f8faff;
+  --tertiary-container-color: #bfa3f3;
+  --on-tertiary-container-color: #140233;
 
   --link-color: #65e9fc;
   --neutral-color: #e0e0e0;
